add impressionist gem function

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -33,7 +33,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <% if !current_user %>
-                            <li><%= link_to("注册", new_user_registration_path) %> </li>
+                            <li><%= link_to(content_tag(:i, '注册', class: 'fa fa-user-plus'), new_user_registration_path)%></li>
                             <li><%= link_to(content_tag(:i, '登入', class: 'fa fa-sign-in'), new_user_session_path) %></li>
                         <% end %>
                         <% if current_user %>
