--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -17,12 +17,10 @@
                                 <div class="row" style="background-color:#fff;">
                                     <!-- 浏览量 -->
                                     <div class="col-md-3 col-md-offset-3 visit">
-                                        <%= link_to like_plansintroduction_post_path(post), method: :put do %>
-                                            <div class="pi-thumbs-up">
-                                                <i class="fa fa-thumbs-up" , style="color:#878787;"></i>
-                                                <span> <%= post.get_upvotes.size %></span>
-                                            </div>
-                                        <% end %>
+                                        <div class="pi-thumbs-up">
+                                            <i class="fa fa-eye" , style="color:#878787;"></i>
+                                            <span> <%=  post.impressionist_count(:filter=>:session_hash) %></span>
+                                        </div>
                                     </div>
                                     <!-- 点赞 -->
                                     <div class="col-md-3 upvote">
