upgrade pagination looking

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -70,8 +70,8 @@
     overflow: hidden; }
 
 .apple_pagination {
-  background: #f1f1f1;
-  border: 1px solid #e5e5e5;
+  background: #f5f5f2;
+  // border: 1px solid #e5e5e5;
   text-align: center;
   padding: 1em;
   cursor: default; }
@@ -82,7 +82,7 @@
   .apple_pagination .current {
     font-style: normal;
     font-weight: bold;
-    background-color: #bebebe;
+    background-color: #2196F3;
     display: inline-block;
     width: 1.4em;
     height: 1.4em;
