--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -53,31 +53,8 @@
 // index jumbotron
 
 .jumbotron {
-  background-image:url('https://ww4.sinaimg.cn/large/006tKfTcly1fh6im54oy0j30zk0gotb7.jpg');
+  background-image:url('https://ww2.sinaimg.cn/large/006tNbRwly1fhb39lpzvgj31hc0gon7k.jpg');
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 110px;
-}
-
-
-
-.title {
-  font-family: "Helvetica Neue", "Microsoft Yahei", 微软雅黑;
-  text-align: center;
-  margin-top: 200px;
-  margin-bottom: 80px;
-}
-
-.slogan {
-  margin-top: 10px;
-  margin-bottom: 50px;
-  text-align: center;
-  color: white;
-  top: 12px;
-}
-
-.lead {
-  margin-bottom: 60px;
-  text-align: center;
-  color: white;
+  min-height: 450px;
 }
