--- a/app/assets/stylesheets/warehouse/products.scss
+++ b/app/assets/stylesheets/warehouse/products.scss
@@ -41,9 +41,9 @@
 
 .show-pic {
     display: block;
-    padding: 0px;
     padding-bottom: 20px;
-    padding-right: 31.39px;
+    padding-right: 16px;
+    padding-left: 16px;
     line-height: 1.42857143;
     background-color: #fff;
     border: 0px solid #ddd;
