--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -29,6 +29,7 @@
                         <% end %>
                         <p class="bg-white show-slogan product-title"> <%= product.title %> </p>
                         <p class="bg-white show-slogan-2 product-slogan"> <%= product.slogan %> </p>
+                        <p class="bg-white show-slogan-2 product-price"> ¥ <%= product.price %> </p>
                     </div>
                 <% end %>
             </div>
