--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -8,20 +8,20 @@
                 </div>
                 <div class="col-md-8 space-20">
                     <div class="cpad">
-                        <%= link_to root_path do %>
-                            <img src="https://ww2.sinaimg.cn/large/006tNbRwly1fh95eocfahj30g307ojso.jpg" alt="">
+                        <%= link_to @intro5.link, target: "_blank" do %>
+                            <%= image_tag(@intro5.image.ad3, :class => "width-100") %>
                         <% end %>
                     </div>
                     <div class="cpad" style="margin-top:10px;">
-                        <%= link_to root_path do %>
-                            <img src="https://ww4.sinaimg.cn/large/006tNbRwly1fh95g6nevlj30fz07kjsp.jpg" alt="">
+                        <%= link_to @intro6.link, target: "_blank" do %>
+                            <%= image_tag(@intro6.image.ad3, :class => "width-100") %>
                         <% end %>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="cpad-v space-20">
-                        <%= link_to root_path do %>
-                            <img src="https://ww1.sinaimg.cn/large/006tNbRwly1fh95gew1oqj30860fh3zq.jpg" alt="">
+                        <%= link_to @intro7.link, target: "_blank" do %>
+                            <%= image_tag(@intro7.image.ad4, :class => "width-100") %>
                         <% end %>
                     </div>
                 </div>
@@ -129,13 +129,13 @@
             </div>
             <div class="row space-30">
                 <div class="col-md-6">
-                    <%= link_to root_path do %>
-                        <img src="https://ww2.sinaimg.cn/large/006tNc79ly1fha71phupxj30c506cgo6.jpg" alt="">
+                    <%= link_to @intro8.link, target: "_blank" do %>
+                        <%= image_tag(@intro8.image.ad5, :class => "width-100") %>
                     <% end %>
                 </div>
                 <div class="col-md-6">
-                    <%= link_to root_path do %>
-                        <img src="https://ww3.sinaimg.cn/large/006tNc79ly1fha71ztq8nj30c506ctbz.jpg" alt="">
+                    <%= link_to @intro9.link, target: "_blank" do %>
+                        <%= image_tag(@intro9.image.ad5, :class => "width-100") %>
                     <% end %>
                 </div>
             </div>
