--- a/app/views/admin/intros/index.html.erb
+++ b/app/views/admin/intros/index.html.erb
@@ -1,6 +1,6 @@
-<h2> Intros List </h2>
+<h2> 广告 List </h2>
 <div class="pull-right" style="padding-bottom: 20px;">
-    <%= link_to("新增首页大广告", new_admin_intro_path, class:"btn btn-primary btn-sm")%>
+    <%= link_to("新建广告", new_admin_intro_path, class:"btn btn-primary btn-sm")%>
 </div>
 <table class="table table-bordered">
     <thead>
@@ -28,8 +28,8 @@
                     <%= intro.link %>
                 </td>
                 <td>
-                    <%= link_to("Edit",edit_admin_intro_path(intro))%>|
-                    <%= link_to("Delete", admin_intro_path(intro),method: :delete,:data => { :confirm => "Are you sure?" }) %>
+                    <%= link_to("Edit",edit_admin_intro_path(intro))%>
+                    <!-- <%= link_to("Delete", admin_intro_path(intro),method: :delete,:data => { :confirm => "Are you sure?" }) %> -->
                 </td>
             </tr>
         <% end %>
