--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,8 +11,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="space-30">
-                        <%= link_to root_path do %>
-                            <img src="https://ww3.sinaimg.cn/large/006tNbRwly1fhb656pxv7j30dq09f0yh.jpg" alt="">
+                        <%= link_to @intro10.link, target: "_blank" do %>
+                            <%= image_tag(@intro10.image.ad6, :class => "width-100") %>
                         <% end %>
                     </div>
                 </div>
