--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -3,27 +3,27 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="pwd space-30">
-                    <p class="left-15">首页／方案</p>
+                    <p class="left-15" style="margin-bottom:-9px;">首页／方案</p>
                 </div>
                 <div class="row">
                     <% @posts.each do |post| %>
-                        <div class="col-xs-6 col-md-6 text-center">
-                            <div class="space-50">
+                        <div class="col-xs-6 col-md-6 text-center" style="width:463px;">
+                            <div style="margin-top:35px;">
                             </div>
                             <!-- 文章标题  宣传语-->
                             <p class="bg-white post-title"> <%= post.title %> </p>
                             <p class="bg-white post-slogan"> <%= post.slogan %> </p>
-                            <div class="container-fluid" style="width:430px;">
+                            <div class="container-fluid" style="width:430px;margin-left:12px;">
                                 <div class="row" style="background-color:#fff;">
                                     <!-- 浏览量 -->
-                                    <div class="col-md-3 col-md-offset-3 visit">
+                                    <div class="col-md-3 col-md-offset-3 visit" style="padding-right:66px;padding-left:0px;">
                                         <div class="pi-thumbs-up">
                                             <i class="fa fa-eye" , style="color:#878787;"></i>
                                             <span> <%=  post.impressionist_count(:filter=>:session_hash) %></span>
                                         </div>
                                     </div>
                                     <!-- 点赞 -->
-                                    <div class="col-md-3 upvote">
+                                    <div class="col-md-3 upvote" style="padding-left:22px;">
                                         <%= link_to like_plansintroduction_post_path(post), method: :put do %>
                                             <div class="pi-thumbs-up">
                                                 <i class="fa fa-thumbs-up" , style="color:#878787;"></i>
