--- a/app/views/warehouse/products/index.html.erb
+++ b/app/views/warehouse/products/index.html.erb
@@ -34,13 +34,13 @@
     <div class="col-md-8 col-md-offset-2">
         <div class="container-fluid">
             <div class="row space-50">
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding-right:0px;width:340px;">
                     <hr class="header-hr">
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4" style="padding-right:0px;padding-left:0px;width:260px;">
                     <h2 class="header">Convolum 系列</h2>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding-left:0px;width:340px;">
                     <hr class="header-hr">
                 </div>
             </div>
@@ -117,14 +117,14 @@
         <!-- Convolum 特色 -->
         <div class="container-fluid">
             <div class="row space-50">
-                <div class="col-md-4">
+                <div class="col-md-4" style="padding-right:0px;width:340px;" >
                     <hr class="header-hr">
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4 " style="padding-right:0px;padding-left:0px;width:260px;">
                     <h2 class="header">Convolum 特色</h2>
                 </div>
-                <div class="col-md-4">
-                    <hr class="header-hr">
+                <div class="col-md-4"  style="padding-left:0px;width:340px;">
+                    <hr class="header-hr" >
                 </div>
             </div>
             <div class="row space-30">
