--- a/app/assets/stylesheets/warehouse/products.scss
+++ b/app/assets/stylesheets/warehouse/products.scss
@@ -68,14 +68,17 @@
 .product-title {
   color: #333333;
   font-size: 14px;
+  width: 232px;
 }
 
 .product-slogan {
   color: #666666;
   font-size: 13px;
+  width: 232px;
 }
 
 .product-price {
   color: #f51919;
   font-size: 16px;
+  width: 232px;
 }
