--- a/app/views/admin/intros/edit.html.erb
+++ b/app/views/admin/intros/edit.html.erb
@@ -1,2 +1,2 @@
-<h2><span class="fa fa-pencil-square-o"></span>编辑大广告</h2>
+<h2><span class="fa fa-pencil-square-o"></span>编辑广告</h2>
 <%= render('form') %>
