plan icons px fix

--- a/app/views/plansintroduction/posts/index.html.erb
+++ b/app/views/plansintroduction/posts/index.html.erb
@@ -16,7 +16,7 @@
                             <div class="container-fluid" style="width:430px;margin-left:12px;">
                                 <div class="row" style="background-color:#fff;">
                                     <!-- 浏览量 -->
-                                    <div class="col-md-3 col-md-offset-3 visit" style="padding-right:66px;padding-left:0px;">
+                                    <div class="col-md-3 col-md-offset-3 visit">
                                         <div class="pi-thumbs-up">
                                             <i class="fa fa-eye" , style="color:#878787;"></i>
                                             <span> <%=  post.impressionist_count(:filter=>:session_hash) %></span>
