footer font px fix

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-8 col-md-offset-2" >
-                <div class="row" style="margin-bottom:20px;">
+                <div class="row" style="margin-bottom:20px;text-align:left;">
                     <div class="col-md-2 col-xs-4">
                         <h4 style="margin-bottom: 22px;">推荐产品</h4>
                         <ul class="list-unstyled">
@@ -33,20 +33,20 @@
                             <li><%= link_to("采购相关", root_path )%></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 col-xs-12 ">
+                    <div class="col-md-4 col-xs-12" style="text-align:right">
                         <ul class="list-unstyled">
                             <br>
                             <p>在线服务热线</p>
                             <p style="font-size:30px;">
                                 4001-888-222
                             </p>
-                            <p style="font-size:16px;">微信公众号</p>
+                            <p style="font-size:14px;color:#666666;">微信公众号</p>
                         </ul>
                     </div>
                 </div>
                 <div class="row">
                     <hr>
-                    <p style="margin-top:38px;margin-bottom:80px;">
+                    <p  class="footer-copy">
                         Copyright ©2017 Convolum 版权所有 保留一切权利 蜀B2-20170706 联系方式：1234567890
                   </p>
                 </div>
