--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -194,11 +194,11 @@
   min-height: 200px;
   background-color: #f5f5f2;
   padding: 15px 0;
-  color: #000;
-  font-size: 14px;
+  color: #333333;
+  font-size: 12px;
 
   h4 {
-    font-size: 16px;
+    font-size: 14px;
     margin-top: 25px;
     margin-bottom: 15px;
   }
@@ -209,7 +209,7 @@
 
   a {
     text-decoration:none;
-    color: #000;
+    color: #333333;
   }
 
   a:hover,
@@ -242,6 +242,12 @@
     margin-top: 15px;
   }
 
+  .footer-copy {
+    margin-top:28.5px;
+    margin-bottom:60px;
+    font-size: 12px;
+    color: #666666;
+  }
   .footer-content {
     font-size: 16px;
     font-family: Raleway;
