--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -58,3 +58,47 @@
   background-size: cover;
   min-height: 450px;
 }
+
+
+.product-show-pic {
+
+      display: block;
+      padding:0px 13px 15px 12px;
+
+      line-height: 1.42857143;
+      background-color: #fff;
+      border: 0px solid #ddd;
+      border-radius: 0px;
+      -webkit-transition: border 0.2s ease-in-out;
+      -o-transition: border 0.2s ease-in-out;
+      transition: border 0.2s ease-in-out;
+
+}
+
+.product-show-slogan {
+  padding-bottom: 10px;
+  margin-bottom: 0px;
+}
+
+.product-show-slogan-2 {
+  padding-bottom: 25px;
+  margin-bottom: 0px;
+}
+
+.product-title2 {
+  color: #333333;
+  font-size: 14px;
+  // width: 232px;
+}
+
+.product-slogan2 {
+  color: #666666;
+  font-size: 13px;
+  // width: 232px;
+}
+
+.product-price2 {
+  color: #f51919;
+  font-size: 16px;
+  // width: 232px;
+}
