--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,28 +8,26 @@
                     <h2 class="header">热卖产品</h2>
                 </div>
             </div>
+            <div class="space-30">
+            </div>
             <div class="row">
-                <div class="col-md-6" >
-                    <div class="space-30">
-                        <%= link_to @intro10.link, target: "_blank" do %>
-                            <%= image_tag(@intro10.image.ad6, :class => "width-100") %>
-                        <% end %>
-                    </div>
+                <div class="col-md-6" style="padding:0px 5px 0px 0px;">
+                    <%= link_to @intro10.link, target: "_blank" do %>
+                        <%= image_tag(@intro10.image.ad6, :class => "width-100") %>
+                    <% end %>
                 </div>
                 <% @products.each do |product| %>
-                    <div class="col-xs-6 col-md-3 text-center" style="width:240px;">
-                        <div class="space-30">
-                        </div>
+                    <div class="col-xs-6 col-md-3 text-center" style="padding:0px 5px;margin-bottom:10px;">
                         <%= link_to product_path(product) do  %>
                             <% if product.photos.present? %>
-                                <%= image_tag(product.photos[0].image.thumb.url , class: "show-pic") %>
+                                <%= image_tag(product.photos[0].image.thumb.url , class: "product-show-pic") %>
                             <% else %>
-                                <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "show-pic") %>
+                                <%= image_tag("http://placehold.it/200x200&text=No Pic", class: "product-show-pic") %>
                             <% end %>
                         <% end %>
-                        <p class="bg-white show-slogan product-title"> <%= product.title %> </p>
-                        <p class="bg-white show-slogan-2 product-slogan"> <%= product.slogan %> </p>
-                        <p class="bg-white show-slogan-2 product-price"> ¥ <%= product.price %> </p>
+                        <p class="bg-white product-show-slogan product-title2"> <%= product.title %> </p>
+                        <p class="bg-white product-show-slogan-2 product-slogan2"> <%= product.slogan %> </p>
+                        <p class="bg-white product-show-slogan-2 product-price2"> ¥ <%= product.price %> </p>
                     </div>
                 <% end %>
             </div>
