--- a/app/assets/stylesheets/wirelessinfo/posts.scss
+++ b/app/assets/stylesheets/wirelessinfo/posts.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the wirelessinfo::posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.post-link {
+  font-size: 16px;
+  color: #666666;
+  margin: 15px 0px;
+
+  a {
+    color: #666666;
+    text-decoration: none;
+    }
+
+  a:hover, a:focus {
+      color: #666666;
+      text-decoration: underline;
+    }
+}
