--- a/app/views/wirelessinfo/posts/index.html.erb
+++ b/app/views/wirelessinfo/posts/index.html.erb
@@ -28,23 +28,36 @@
         </div>
     </div>
 </div>
-<% @posts.each do |post| %>
-    <tr>
-        <td>
-            <%= link_to(post.title, wirelessinfo_post_path(post)) %>
-        </td>
-    </tr>
-<% end %>
-搜索框
-<div class="nav navbar-nav navbar-left" style="width: 386px;padding-top: 8px;padding-left: 90px;">
-    <%= form_tag search_products_path , :method => :get  do %>
-        <div class="input-group" id="search-id" >
-            <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索产品或文章...">
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                </button>
+<div class="row  space-30">
+    <div class="col-md-2" style="margin-right:30px;">
+    </div>
+    <div class="col-md-8 bg-white" style="max-width:910px;padding:0px;">
+        <div class="container-fluid">
+            <div class="row space-30">
+                <div class="col-md-4" style="padding:0px;">
+                    <hr class="header-hr">
+                </div>
+                <div class="col-md-4" style="padding:0px;">
+                    <h2 class="header">专业无线知识汇总</h2>
+                </div>
+                <div class="col-md-4" style="padding:0px;">
+                    <hr class="header-hr">
+                </div>
+            </div>
+            <div class="row " style="margin-top:5px;">
+                <div class="col-md-12 text-center">
+                    <a href="#" style="color:#1690dc;">
+                        <p>查看更多</p>
+                    </a>
+                </div>
+            </div>
+            <div class="row space-30">
+                <% @posts.each do |post| %>
+                    <div class="col-md-6 text-left">
+                        <p class="post-link"> <%= link_to(post.title, wirelessinfo_post_path(post)) %> </p>
+                    </div>
+                <% end %>
             </div>
         </div>
-    <% end %>
+    </div>
 </div>
