font size color upgrade

--- a/app/assets/stylesheets/wirelessinfo/posts.scss
+++ b/app/assets/stylesheets/wirelessinfo/posts.scss
@@ -24,6 +24,8 @@
 .post-collapse {
   background-color: #fafafa;
   padding: 24px 18px 45px 18px;
+  font-size: 14px;
+  color: #666666;
 }
 
 .more {
