--- a/app/assets/stylesheets/wirelessinfo/posts.scss
+++ b/app/assets/stylesheets/wirelessinfo/posts.scss
@@ -38,3 +38,21 @@
     color: #1690dc;
     text-decoration: underline;
   }
+
+
+//wirelessinfo-more
+
+.search-box {
+
+    background-image:url('https://ww3.sinaimg.cn/large/006tNc79ly1fhg1ole2nkj31hc09en79.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 260px;
+
+
+}
+
+.search-bar {
+  width: 450px;
+  height: 42px;
+}
