--- a/app/views/wirelessinfo/posts/index.html.erb
+++ b/app/views/wirelessinfo/posts/index.html.erb
@@ -54,7 +54,7 @@
             </div>
             <div class="row " style="margin-top:5px;">
                 <div class="col-md-12 text-center">
-                    <a href="#" style="color:#1690dc;">
+                    <a href=/wirelessinfo/posts/8 style="color:#1690dc;">
                         <p>查看更多</p>
                     </a>
                 </div>
