--- a/app/views/wirelessinfo/posts/show.html.erb
+++ b/app/views/wirelessinfo/posts/show.html.erb
@@ -1,13 +1,37 @@
-搜索框
-<div class="nav navbar-nav navbar-left" style="width: 386px;padding-top: 8px;padding-left: 90px;">
-    <%= form_tag search_products_path , :method => :get  do %>
-        <div class="input-group" id="search-id" >
-            <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索产品或文章...">
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-                    <i class="glyphicon glyphicon-search"></i>
-                </button>
+<!-- pwd -->
+<div class="row">
+    <div class="col-md-8 col-md-offset-2">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="pwd" style="margin-top:20px;">
+                    <p class="left-15">首页／无线知识</p>
+                </div>
             </div>
         </div>
-    <% end %>
+    </div>
+</div>
+<!-- search -->
+<div class="row" style="margin-top:10px;">
+    <div class="col-md-12">
+        <div class="search-box">
+            <div class="container-fluid">
+                <div class="row space-50">
+                    <div class="col-md-4 col-md-offset-4">
+                        <div class="search-bar">
+                            <%= form_tag search_products_path , :method => :get  do %>
+                                <div class="input-group" id="search-id" >
+                                    <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索产品或文章...">
+                                    <div class="input-group-btn">
+                                        <button class="btn btn-default" type="submit">
+                                            <i class="glyphicon glyphicon-search"></i>
+                                        </button>
+                                    </div>
+                                </div>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
