--- a/app/views/wirelessinfo/posts/show.html.erb
+++ b/app/views/wirelessinfo/posts/show.html.erb
@@ -15,15 +15,15 @@
     <div class="col-md-12">
         <div class="search-box">
             <div class="container-fluid">
-                <div class="row space-50">
+                <div class="row" style="margin-top:80px;">
                     <div class="col-md-4 col-md-offset-4">
                         <div class="search-bar">
                             <%= form_tag search_products_path , :method => :get  do %>
                                 <div class="input-group" id="search-id" >
-                                    <input type="text" class="form-control" name="q" value="<%= params[:q] %>" placeholder="搜索产品或文章...">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-default" type="submit">
-                                            <i class="glyphicon glyphicon-search"></i>
+                                    <input type="text" class="search-input" name="q" value="<%= params[:q] %>" placeholder="请输入您的问题...">
+                                    <div class="input-group-btn ">
+                                        <button class="btn  search-icon" type="submit">
+                                            <i class="fa fa-search" style="color:#fff;font-size:26px;"></i>
                                         </button>
                                     </div>
                                 </div>
