--- a/app/assets/stylesheets/wirelessinfo/posts.scss
+++ b/app/assets/stylesheets/wirelessinfo/posts.scss
@@ -128,6 +128,7 @@
 
 .post-description {
   margin-left: 42px;
+  margin-right: 42px;
   margin-bottom: 40px;
 }
 
@@ -137,6 +138,7 @@
   line-height: 1.8em;                   //拉开行高
   text-align: justify;                  //文本两端对齐
   img {
+    
     max-width:100%; height:auto;         //重要样式代码，实现不同大小屏幕下的响应式伸缩
     border-radius: 1px;                 //为所有图片设置6px的圆角
     }
