--- a/app/assets/stylesheets/wirelessinfo/posts.scss
+++ b/app/assets/stylesheets/wirelessinfo/posts.scss
@@ -124,21 +124,21 @@
   margin-left: 42px;
   padding-top: 47.5px;
   padding-bottom: 0px;
+  font-size: 1.5em;
+  font-weight: normal;
 }
 
+
 .post-description {
+
   margin-left: 42px;
   margin-right: 42px;
   margin-bottom: 40px;
-}
-
-.post-description {
-  margin-left: 42px;
-  font-size: 1.2em;
+  font-size: 1.1em;
   line-height: 1.8em;                   //拉开行高
   text-align: justify;                  //文本两端对齐
   img {
-    
+
     max-width:100%; height:auto;         //重要样式代码，实现不同大小屏幕下的响应式伸缩
     border-radius: 1px;                 //为所有图片设置6px的圆角
     }
