add position to move up posts

--- a/app/views/wirelessinfo/posts/show.html.erb
+++ b/app/views/wirelessinfo/posts/show.html.erb
@@ -35,8 +35,8 @@
         </div>
     </div>
 </div>
-<div class="row" style="padding-top:-20px;">
-    <div class="col-md-8 col-md-offset-2" >
+<div class="row">
+    <div class="col-md-8 col-md-offset-2" style="position:relative;left:0px;top:-60px;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-2 show-list" style="height:100%;min-height:820px;">
