--- a/app/views/wirelessinfo/posts/show.html.erb
+++ b/app/views/wirelessinfo/posts/show.html.erb
@@ -39,7 +39,7 @@
     <div class="col-md-8 col-md-offset-2" style="position:relative;left:0px;top:-60px;">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-2 show-list" style="height:100%;min-height:820px;">
+                <div class="col-md-2 show-list" style="height:820px;overflow-y:scroll;direction: ltr;">
                     <div class="space-50">
                     </div>
                     <% @posts.each do |post| %>
@@ -47,11 +47,8 @@
                             <%= link_to(post.title, wirelessinfo_post_path(post)) %>
                         </div>
                     <% end %>
-                    <div style="margin-top:33px;">
-                        <%= will_paginate @posts , :page_links => false%>
-                    </div>
                 </div>
-                <div class="col-md-10 show-post" style="height:100%;min-height:820px;">
+                <div class="col-md-10 show-post" style="height:820px;overflow-y:scroll;direction: ltr;">
                     <div class="post-title-show">
                         <%= @post.title %>
                     </div>
