--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -20,6 +20,7 @@
                         <li class="active"><%= link_to("文章",admin_posts_path)%></li>
                         <li class="active"><%= link_to("留言",admin_messages_path)%></li>
                         <li class="active"><%= link_to("广告",admin_intros_path)%></li>
+                        <li class="active"><%= link_to("视频",admin_videos_path)%></li>
                     </ul>
                 </div>
                 <div class="col-md-10">
