--- a/app/views/admin/videos/index.html.erb
+++ b/app/views/admin/videos/index.html.erb
@@ -14,7 +14,7 @@
         <% @videos.each do |video| %>
             <tr>
                 <td>
-                    <%= video.id %>
+                    <%= link_to(video.id, admin_video_path(video)) %>
                 </td>
                 <td>
                     <%= video.name %>
