--- a/app/views/admin/videos/show.html.erb
+++ b/app/views/admin/videos/show.html.erb
@@ -1,3 +1,3 @@
 <%= @video.id %>
 <%= @video.name %>
-<%= video_tag @video.content_url.to_s ,:controls =>true %>
+<%= video_tag @video.content_url.to_s ,:controls =>true,:autoplay => true %>
