add subcate to post

--- a/app/views/wirelessinfo/posts/index.html.erb
+++ b/app/views/wirelessinfo/posts/index.html.erb
@@ -15,7 +15,7 @@
                         <div class="col-md-8 col-md-offset-2" style="padding-left:46px;">
                             <!-- Modal content-->
                             <div style="margin-top:70px;">
-                                <%= video_tag @video.content_url.to_s ,:controls =>true ,:autoplay => true %>
+                                <%= video_tag @video.content_url.to_s ,:controls =>true ,:autoplay => false %>
                             </div>
                         </div>
                     </div>
