--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,6 +97,34 @@
     .apple_pagination a:hover, .apple_pagination a:focus {
       text-decoration: underline; }
 
+.apple_pagination_white {
+        background: #fff;
+        // border: 1px solid #e5e5e5;
+        text-align: center;
+        padding: 1em;
+        cursor: default; }
+        .apple_pagination_white a, .apple_pagination_white span {
+          padding: 0.2em 0.3em; }
+        .apple_pagination_white .disabled {
+          color: #aaaaaa; }
+        .apple_pagination_white .current {
+          font-style: normal;
+          font-weight: bold;
+          background-color: #2196F3;
+          display: inline-block;
+          width: 1.4em;
+          height: 1.4em;
+          line-height: 1.5;
+          -moz-border-radius: 1em;
+          -webkit-border-radius: 1em;
+          border-radius: 1em;
+          text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px; }
+        .apple_pagination_white a {
+          text-decoration: none;
+          color: black; }
+          .apple_pagination_white a:hover, .apple_pagination_white a:focus {
+            text-decoration: underline; }
+
 .flickr_pagination {
   text-align: center;
   padding: 0.3em;
